Fix top portion of thumbnails being cut off
We don't want the thumbnails to be vertically-centered. Fix suggested by
Tobias.

--- a/src/resources/about.css
+++ b/src/resources/about.css
@@ -292,6 +292,7 @@ html.epiphany-html {
     display: block;
     border: 1px solid #ccc;
     background: url(ephy-resource:///org/gnome/epiphany/web-watermark.svg) center no-repeat, #fff;
+    background-position: top;
     background-repeat: no-repeat;
     border-radius: 5px;
 }
